--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="header_container"></header>
     <div class="parallax"></div>
-    <header>
-      <h1 style="text-align: center">Teamfight tactics compositions</h1>
-      <h2 style="text-align: center">
-        Listed below are a few examples of the best and most popular TFT
-        compositions
-      </h2>
-      <h3>Set 3.5</h3>
-      <nav>
-        <ul>
-          <li><a href="Astrosnipers.html">Astro snipers</a></li>
-          <li><a href="Mechpilot.html">Mech Pilot</a></li>
-        </ul>
-      </nav>
-      <h3>Set 4</h3>
-      <nav>
-        <ul>
-          <li><a href="Ninjadazzlers.html">Ninja Dazzlers</a></li>
-        </ul>
-      </nav>
-    </header>
+    <h1 style="text-align: center">Teamfight tactics compositions</h1>
+    <h2 style="text-align: center">
+      Listed below are a few examples of the best and most popular TFT
+      compositions
+    </h2>
+    <h3>Set 3.5</h3>
+    <nav>
+      <ul>
+        <li><a href="Astrosnipers.html">Astro snipers</a></li>
+        <li><a href="Mechpilot.html">Mech Pilot</a></li>
+      </ul>
+    </nav>
+    <h3>Set 4</h3>
+    <nav>
+      <ul>
+        <li><a href="Ninjadazzlers.html">Ninja Dazzlers</a></li>
+      </ul>
+    </nav>
     <article id="Astro Snipers"></article>
     <article id="Mech Pilot"></article>
     <article id="Ninja Dazzlers"></article>
