changed name on a html tab

--- a/CultistDusk.html
+++ b/CultistDusk.html
@@ -10,7 +10,7 @@
   <body>
     <header></header>
     <main>
-      <h1>Ninja Dazzlers</h1>
+      <h1>Cultist Dusk</h1>
     </main>
     <footer></footer>
   </body>
