--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <h4>TFTutorials</h4>
+      </div>
+      <ul>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li><a href="#">Compositions</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </nav>
     <header class="header_container"></header>
     <div class="parallax"></div>
     <h1 style="text-align: center">Teamfight tactics compositions</h1>
@@ -24,7 +37,7 @@
     <h3>Set 4</h3>
     <nav>
       <ul>
-        <li><a href="Ninjadazzlers.html">Ninja Dazzlers</a></li>
+        <li><a href="CultistDusk.html">Cultist Dusk</a></li>
       </ul>
     </nav>
     <article id="Astro Snipers"></article>
