changed navbar, styled table

--- a/Astrosnipers.html
+++ b/Astrosnipers.html
@@ -13,7 +13,7 @@
         <iframe width="560" height="315" src="ezgif.com-resize.png"></iframe>
       </div>
       <h1>Astro Snipers</h1>
-      <table>
+      <table class="tabellcontent">
         <tr>
           <td>Champions</td>
           <td><img src="Gnar.png" alt="gnar" width="50" height="50" /></td>
@@ -58,7 +58,7 @@
         </tr>
       </table>
       <h3>Composition overview</h3>
-      <p style="width: 600px">
+      <p style="width: 600px" class="text">
         Here is a simple overview of what the ideal composition is at level 8 in
         which your primary carries are Teemo and Jhin who you also want to
         prioritize items on. This foundation of this composition is not built
@@ -79,7 +79,7 @@
         ></iframe>
       </div>
       <h3>Early game</h3>
-      <p style="width: 600px">
+      <p style="width: 600px" class="text">
         Ashe, Nautilus, Karma and Blitzcrank are the only champions you will be
         able to find consistently during early levels. You should therefore
         accumilate them throughout the entire game, either putting them in your
@@ -103,7 +103,7 @@
           <td><img src="Lucian.png" alt="lucian" width="50" height="50" /></td>
         </tr>
       </table>
-      <p style="width: 600px">
+      <p style="width: 600px" class="text">
         Do not reroll at all until you are at least level 7 as the chance to hit
         your core units such as Teemo, Gnar, Jhin and Wukong are very low due to
         all of them being 4 cost units. You should instead build up interest and
@@ -112,15 +112,17 @@
         it can be good to reroll at level 6, but is not advised. Listed below
         are the chances to hit the different costing units through all levels.
       </p>
-      <table>
-        <tr>
-          <td>Level</td>
-          <td>1cost</td>
-          <td>2cost</td>
-          <td>3cost</td>
-          <td>4cost</td>
-          <td>5cost</td>
-        </tr>
+      <table class="tabell">
+        <thead>
+          <tr>
+            <td>Level</td>
+            <td>1cost</td>
+            <td>2cost</td>
+            <td>3cost</td>
+            <td>4cost</td>
+            <td>5cost</td>
+          </tr>
+        </thead>
         <tr>
           <td>1</td>
           <td>100%</td>
