--- a/CultistDusk.html
+++ b/CultistDusk.html
@@ -11,6 +11,90 @@
     <header></header>
     <main>
       <h1>Cultist Dusk</h1>
+      <table class="tabell">
+        <thead>
+          <tr>
+            <td>Level</td>
+            <td>1cost</td>
+            <td>2cost</td>
+            <td>3cost</td>
+            <td>4cost</td>
+            <td>5cost</td>
+          </tr>
+        </thead>
+        <tr>
+          <td>1</td>
+          <td>100%</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>100%</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>75%</td>
+          <td>25%</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>55%</td>
+          <td>30%</td>
+          <td>15%</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>40%</td>
+          <td>30%</td>
+          <td>20%</td>
+          <td>5%</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>30%</td>
+          <td>35%</td>
+          <td>25%</td>
+          <td>10%</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>19%</td>
+          <td>35%</td>
+          <td>30%</td>
+          <td>15%</td>
+          <td>1%</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>14%</td>
+          <td>25%</td>
+          <td>35%</td>
+          <td>20%</td>
+          <td>6%</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>10%</td>
+          <td>15%</td>
+          <td>30%</td>
+          <td>30%</td>
+          <td>15%</td>
+        </tr>
+      </table>
     </main>
     <footer></footer>
   </body>
