--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       <div class="logo">
         <h4>TFTutorials</h4>
       </div>
-      <ul>
+      <ul class="nav-links">
         <li>
           <a href="#">Home</a>
         </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
         <li><a href="#">Compositions</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
       </ul>
     </nav>
     <header class="header_container"></header>
