updated "CultistDusk.html" added flexbox

--- a/CultistDusk.html
+++ b/CultistDusk.html
@@ -10,16 +10,49 @@
   <body>
     <header></header>
     <main>
-      <h1>Cultist Dusk</h1>
+      <h1 style="text-align: center">Cultist Dusk</h1>
+      <h3 style="text-align: center">Core Composition</h3>
+      <div class="flexbox-container">
+        <div class="flexbox-item">
+          <img src="Jhin2.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Riven.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Cassiopeia.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Aatrox.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Evelynn.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Pyke.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Elise.png" alt="" />
+        </div>
+        <div class="flexbox-item">
+          <img src="Zilean.png" alt="" />
+        </div>
+      </div>
+      <h2 style="text-align: center" style="font-size: 30px">Itemization</h2>
+      <div class="flexbox-container2">
+        <div class="flexbox-item2">
+          <img src="Jhin2.png" alt="" width="50" height="50" />
+        </div>
+      </div>
       <table class="tabell">
         <thead>
           <tr>
             <td>Level</td>
-            <td>1cost</td>
-            <td>2cost</td>
-            <td>3cost</td>
-            <td>4cost</td>
-            <td>5cost</td>
+            <td>1 cost</td>
+            <td>2 cost</td>
+            <td>3 cost</td>
+            <td>4 cost</td>
+            <td>5 cost</td>
           </tr>
         </thead>
         <tr>
