hover nav bar, added contact, updated cultistdusk

--- a/index.html
+++ b/index.html
@@ -16,31 +16,14 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">Contact</a>
+          <a href="Contact.html">Contact</a>
         </li>
-        <li><a href="#">Compositions</a></li>
+        <li><a href="CultistDusk.html">Compositions</a></li>
       </ul>
     </nav>
     <header class="header_container"></header>
     <div class="parallax"></div>
 
-    <h2 style="text-align: center">
-      Listed below are a few examples of the best and most popular TFT
-      compositions
-    </h2>
-    <h3>Set 3.5</h3>
-    <nav>
-      <ul>
-        <li><a href="Astrosnipers.html">Astro snipers</a></li>
-        <li><a href="Mechpilot.html">Mech Pilot</a></li>
-      </ul>
-    </nav>
-    <h3>Set 4</h3>
-    <nav>
-      <ul>
-        <li><a href="CultistDusk.html">Cultist Dusk</a></li>
-      </ul>
-    </nav>
     <article id="Astro Snipers"></article>
     <article id="Mech Pilot"></article>
     <article id="Ninja Dazzlers"></article>
