--- a/CultistDusk.html
+++ b/CultistDusk.html
@@ -38,10 +38,71 @@
           <img src="Zilean.png" alt="" />
         </div>
       </div>
-      <h2 style="text-align: center" style="font-size: 30px">Itemization</h2>
-      <div class="flexbox-container2">
-        <div class="flexbox-item2">
-          <img src="Jhin2.png" alt="" width="50" height="50" />
+      <h2 style="font-size: 30px">Itemization</h2>
+      <h3 style="text-decoration: underline">Jhin:</h3>
+      <div class="row">
+        <div class="flexbox-container3">
+          <div class="flexbox-item2">
+            <img src="Jhin2.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="nedladdning.jpg" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="last whisper.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="GiantSlayer.png" alt="" width="50" height="50" />
+          </div>
+        </div>
+        <div>
+          <div class="flexbox-container2">
+            <div class="flexbox-item2">
+              <img src="Jhin2.png" alt="" width="50" height="50" />
+            </div>
+            <div class="flexbox-item2">
+              <img src="MantleofDusk.png" alt="" width="50" height="50" />
+            </div>
+            <div class="flexbox-item2">
+              <img src="Deathblade.png" alt="" width="50" height="50" />
+            </div>
+            <div class="flexbox-item2">
+              <img src="GuardianAngel.png" alt="" width="50" height="50" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h3 style="text-decoration: underline">Riven:</h3>
+
+      <div class="row">
+        <div class="flexbox-container3">
+          <div class="flexbox-item2">
+            <img src="Riven.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="ionic spark.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="SunfireCape.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="Quicksilver.png" alt="" width="50" height="50" />
+          </div>
+        </div>
+        <div class="flexbox-container2">
+          <div class="flexbox-item2">
+            <img src="Riven.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="Blue_Buff_TFT_item.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="guardian angel.png" alt="" width="50" height="50" />
+          </div>
+          <div class="flexbox-item2">
+            <img src="GargoyleStoneplate.png" alt="" width="50" height="50" />
+          </div>
         </div>
       </div>
       <table class="tabell">
