added id attribute to help, added  link to youtube

--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h3></h3>
+    <h3>olof.ohrn@gmail.com</h3>
+    <h3>070-655-8384</h3>
   </body>
 </html>
