--- a/CultistDusk.html
+++ b/CultistDusk.html
@@ -8,25 +8,24 @@
   </head>
 
   <body>
-    <header></header>
+    <header><h1 style="text-align: center">Cultist Dusk</h1></header>
     <main>
-      <h1 style="text-align: center">Cultist Dusk</h1>
       <h3 style="text-align: center">Core Composition</h3>
       <div class="flexbox-container">
         <div class="flexbox-item">
-          <img src="Jhin2.png" alt="" />
+          <img src="Jhin2.png" alt="jhin2" />
         </div>
         <div class="flexbox-item">
-          <img src="Riven.png" alt="" />
+          <img src="Riven.png" alt="riven" />
         </div>
         <div class="flexbox-item">
-          <img src="Cassiopeia.png" alt="" />
+          <img src="Cassiopeia.png" alt="cassio" />
         </div>
         <div class="flexbox-item">
-          <img src="Aatrox.png" alt="" />
+          <img src="Aatrox.png" alt="aatrox" />
         </div>
         <div class="flexbox-item">
-          <img src="Evelynn.png" alt="" />
+          <img src="Evelynn.png" alt="eve" />
         </div>
         <div class="flexbox-item">
           <img src="Pyke.png" alt="" />
@@ -43,31 +42,31 @@
       <div class="row">
         <div class="flexbox-container3">
           <div class="flexbox-item2">
-            <img src="Jhin2.png" alt="" width="50" height="50" />
+            <img src="Jhin2.png" alt="jhin2" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="nedladdning.jpg" alt="" width="50" height="50" />
+            <img src="nedladdning.jpg" alt="IE" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="last whisper.png" alt="" width="50" height="50" />
+            <img src="last whisper.png" alt="LW" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="GiantSlayer.png" alt="" width="50" height="50" />
+            <img src="GiantSlayer.png" alt="GS" width="50" height="50" />
           </div>
         </div>
         <div>
           <div class="flexbox-container2">
             <div class="flexbox-item2">
-              <img src="Jhin2.png" alt="" width="50" height="50" />
+              <img src="Jhin2.png" alt="jhin2" width="50" height="50" />
             </div>
             <div class="flexbox-item2">
-              <img src="MantleofDusk.png" alt="" width="50" height="50" />
+              <img src="MantleofDusk.png" alt="MOD" width="50" height="50" />
             </div>
             <div class="flexbox-item2">
-              <img src="Deathblade.png" alt="" width="50" height="50" />
+              <img src="Deathblade.png" alt="DB" width="50" height="50" />
             </div>
             <div class="flexbox-item2">
-              <img src="GuardianAngel.png" alt="" width="50" height="50" />
+              <img src="GuardianAngel.png" alt="GA" width="50" height="50" />
             </div>
           </div>
         </div>
@@ -78,33 +77,61 @@
       <div class="row">
         <div class="flexbox-container3">
           <div class="flexbox-item2">
-            <img src="Riven.png" alt="" width="50" height="50" />
+            <img src="Riven.png" alt="riven" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="ionic spark.png" alt="" width="50" height="50" />
+            <img src="ionic spark.png" alt="IS" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="SunfireCape.png" alt="" width="50" height="50" />
+            <img src="SunfireCape.png" alt="SC" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="Quicksilver.png" alt="" width="50" height="50" />
+            <img src="Quicksilver.png" alt="QS" width="50" height="50" />
           </div>
         </div>
         <div class="flexbox-container2">
           <div class="flexbox-item2">
-            <img src="Riven.png" alt="" width="50" height="50" />
+            <img src="Riven.png" alt="riven" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="Blue_Buff_TFT_item.png" alt="" width="50" height="50" />
+            <img src="Blue_Buff_TFT_item.png" alt="BB" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="guardian angel.png" alt="" width="50" height="50" />
+            <img src="guardian angel.png" alt="GA" width="50" height="50" />
           </div>
           <div class="flexbox-item2">
-            <img src="GargoyleStoneplate.png" alt="" width="50" height="50" />
+            <img
+              src="GargoyleStoneplate.png"
+              alt="Gargoyle"
+              width="50"
+              height="50"
+            />
           </div>
         </div>
       </div>
+      <h3 style="text-decoration: underline">How to play</h3>
+      <p style="max-width: 600px">
+        This composition focuses on building around Jhin and Riven, who are also
+        the main carries that you itemize in this build. Depending on your
+        chosen champion your comp will change quite a bit, but the chosen
+        champions you should always buy are:
+      </p>
+      <p style="max-width: 600px">• Riven with Dusk/Keeper as chosen trait</p>
+      <p style="max-width: 600px">
+        • Jhin with Cultist/Sharpshooter as chosen trait
+      </p>
+      <p style="max-width: 600px">
+        • Any champion in the build with dusk trait (preferably Riven or
+        Cassiopeia)
+      </p>
+
+      <p style="max-width: 600px">
+        In this composition going level 7 as fast as you can is ideal, but
+        depending on your health situation this might change. For example if you
+        are winning a lot, it is much better to go level 8 untill you reroll for
+        your champions since you are much more likely to hit your core champions
+        at level 8. Stats are shown below.
+      </p>
       <table class="tabell">
         <thead>
           <tr>
