--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="#">Home</a>
+          <a href="#help">Help</a>
         </li>
         <li>
           <a href="Contact.html">Contact</a>
@@ -23,9 +23,13 @@
     </nav>
     <header class="header_container"></header>
     <div class="parallax"></div>
-
-    <article id="Astro Snipers"></article>
-    <article id="Mech Pilot"></article>
-    <article id="Ninja Dazzlers"></article>
+    <div id="help">
+      <h3 class="text">
+        Welcome to TFTutorials, on this website I'll show guides on different
+        compositions in TFT.<a href="https://youtu.be/HGTxiv5Kxy4"> Here</a> is
+        a begginers guide to the game in case you are new.
+      </h3>
+    </div>
+    <footer></footer>
   </body>
 </html>
